// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider[Base] should render correctly  1`] = `
<div
  class="soui-slider soui-slider-wrapper"
>
  <div
    class="soui-slider-track"
  >
    <div
      class="soui-slider-track-inner"
      dir="ltr"
      style="left: 0%; right: 50%;"
    >
      <div
        class="soui-slider-indicator soui-slider-indicator-end"
        dir="ltr"
      />
      <div
        class="soui-slider-end-value soui-slider-value"
        dir="ltr"
      >
        50
      </div>
    </div>
  </div>
  <div
    class="soui-slider-scale-wrapper"
  >
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        0
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        100
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about disabled 1`] = `
<div
  class="soui-slider soui-slider-wrapper soui-slider-disabled"
>
  <div
    class="soui-slider-track"
  >
    <div
      class="soui-slider-track-inner"
      dir="ltr"
      style="left: 25%; right: 25%;"
    >
      <div
        class="soui-slider-indicator soui-slider-indicator-start"
        dir="ltr"
      />
      <div
        class="soui-slider-start-value soui-slider-value"
        dir="ltr"
      >
        25
      </div>
      <div
        class="soui-slider-indicator soui-slider-indicator-end"
        dir="ltr"
      />
      <div
        class="soui-slider-end-value soui-slider-value"
        dir="ltr"
      >
        75
      </div>
    </div>
  </div>
  <div
    class="soui-slider-scale-wrapper"
  >
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        0
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        100
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about format 1`] = `
<div
  class="soui-slider soui-slider-wrapper"
>
  <div
    class="soui-slider-track"
  >
    <div
      class="soui-slider-track-inner"
      dir="ltr"
      style="left: 6.111111111111112%; right: 60%;"
    >
      <div
        class="soui-slider-indicator soui-slider-indicator-start"
        dir="ltr"
      />
      <div
        class="soui-slider-start-value soui-slider-value"
        dir="ltr"
      >
        09:33
      </div>
      <div
        class="soui-slider-indicator soui-slider-indicator-end"
        dir="ltr"
      />
      <div
        class="soui-slider-end-value soui-slider-value"
        dir="ltr"
      >
        12:36
      </div>
    </div>
  </div>
  <div
    class="soui-slider-scale-wrapper"
  >
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        09:00
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        10:00
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        11:00
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        12:00
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        13:00
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        14:00
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        15:00
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        16:00
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        17:00
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        18:00
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about hider all 1`] = `
<div
  class="soui-slider soui-slider-wrapper"
>
  <div
    class="soui-slider-track"
  >
    <div
      class="soui-slider-track-inner"
      dir="ltr"
      style="left: 0%; right: 96%;"
    >
      <div
        class="soui-slider-indicator soui-slider-indicator-end"
        dir="ltr"
      />
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about hider auto 1`] = `
<div
  class="soui-slider soui-slider-wrapper soui-slider-auto-hide"
>
  <div
    class="soui-slider-track"
  >
    <div
      class="soui-slider-track-inner"
      dir="ltr"
      style="left: 0%; right: 87.5%;"
    >
      <div
        class="soui-slider-indicator soui-slider-indicator-end"
        dir="ltr"
      />
      <div
        class="soui-slider-end-value soui-slider-value"
        dir="ltr"
      >
        4
      </div>
    </div>
  </div>
  <div
    class="soui-slider-scale-wrapper"
  >
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        1
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        3
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        5
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        7
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        9
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        11
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        13
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        15
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        17
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        19
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        21
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        23
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        25
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about increase 1`] = `
<div>
  <div
    class="soui-slider soui-slider-wrapper"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-slider-track"
    >
      <div
        class="soui-slider-track-inner"
        dir="ltr"
        style="left: 0%; right: 50%;"
      >
        <div
          class="soui-slider-indicator soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="soui-slider-end-value soui-slider-value"
          dir="ltr"
        >
          50
        </div>
      </div>
    </div>
    <div
      class="soui-slider-scale-wrapper"
    >
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          0
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          100
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-slider soui-slider-wrapper"
  >
    <div
      class="soui-slider-track"
    >
      <div
        class="soui-slider-track-inner"
        dir="ltr"
        style="left: 20%; right: 50%;"
      >
        <div
          class="soui-slider-indicator soui-slider-indicator-start"
          dir="ltr"
        />
        <div
          class="soui-slider-start-value soui-slider-value"
          dir="ltr"
        >
          20
        </div>
        <div
          class="soui-slider-indicator soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="soui-slider-end-value soui-slider-value"
          dir="ltr"
        >
          50
        </div>
      </div>
    </div>
    <div
      class="soui-slider-scale-wrapper"
    >
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          0
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          100
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about input 1`] = `
<div
  style="display: flex; align-items: center;"
>
  <div
    class="soui-slider soui-slider-wrapper"
    style="flex: 1; margin-inline-end: 16px;"
  >
    <div
      class="soui-slider-track"
    >
      <div
        class="soui-slider-track-inner"
        dir="ltr"
        style="left: 0%; right: 50%;"
      >
        <div
          class="soui-slider-indicator soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="soui-slider-end-value soui-slider-value"
          dir="ltr"
        >
          50
        </div>
      </div>
    </div>
    <div
      class="soui-slider-scale-wrapper"
    >
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          0
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          100
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-input-wrapper-number soui-input soui-input-wrapper"
    data-soui-input-border="true"
    style="width: 100px;"
  >
    <div
      class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
    >
      <input
        class="soui-input-input"
        type="text"
        value="50"
      />
    </div>
    <div
      class="soui-input-number-step"
    >
      <span>
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span>
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about range 1`] = `
<div
  class="soui-slider soui-slider-wrapper"
>
  <div
    class="soui-slider-track"
  >
    <div
      class="soui-slider-track-inner"
      dir="ltr"
      style="left: 25%; right: 25%;"
    >
      <div
        class="soui-slider-indicator soui-slider-indicator-start"
        dir="ltr"
      />
      <div
        class="soui-slider-start-value soui-slider-value"
        dir="ltr"
      >
        25
      </div>
      <div
        class="soui-slider-indicator soui-slider-indicator-end"
        dir="ltr"
      />
      <div
        class="soui-slider-end-value soui-slider-value"
        dir="ltr"
      >
        75
      </div>
    </div>
  </div>
  <div
    class="soui-slider-scale-wrapper"
  >
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        0
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        100
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about scale 1`] = `
<div
  class="soui-slider soui-slider-wrapper"
>
  <div
    class="soui-slider-track"
  >
    <div
      class="soui-slider-track-inner"
      dir="ltr"
      style="left: 0%; right: 100%;"
    >
      <div
        class="soui-slider-indicator soui-slider-indicator-end"
        dir="ltr"
      />
      <div
        class="soui-slider-end-value soui-slider-value"
        dir="ltr"
      >
        0
      </div>
    </div>
  </div>
  <div
    class="soui-slider-scale-wrapper"
  >
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        0
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        10
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        100
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        250
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        500
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        1000
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about step 1`] = `
<div
  class="soui-slider soui-slider-wrapper"
>
  <div
    class="soui-slider-track"
  >
    <div
      class="soui-slider-track-inner"
      dir="ltr"
      style="left: 5%; right: 75%;"
    >
      <div
        class="soui-slider-indicator soui-slider-indicator-start"
        dir="ltr"
      />
      <div
        class="soui-slider-start-value soui-slider-value"
        dir="ltr"
      >
        0.05
      </div>
      <div
        class="soui-slider-indicator soui-slider-indicator-end"
        dir="ltr"
      />
      <div
        class="soui-slider-end-value soui-slider-value"
        dir="ltr"
      >
        0.25
      </div>
    </div>
  </div>
  <div
    class="soui-slider-scale-wrapper"
  >
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        0
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        1
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about step zero 1`] = `
<div
  class="soui-slider soui-slider-wrapper"
>
  <div
    class="soui-slider-track"
  >
    <div
      class="soui-slider-track-inner"
      dir="ltr"
      style="left: 0%; right: 100%;"
    >
      <div
        class="soui-slider-indicator soui-slider-indicator-end"
        dir="ltr"
      />
      <div
        class="soui-slider-end-value soui-slider-value"
        dir="ltr"
      >
        1
      </div>
    </div>
  </div>
  <div
    class="soui-slider-scale-wrapper"
  >
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        1
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        3
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        5
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        7
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        9
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        11
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        13
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        15
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        17
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        19
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        21
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        23
      </div>
    </div>
    <div
      class="soui-slider-scale"
    >
      <div
        class="soui-slider-label"
        dir="ltr"
      >
        25
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about value hover 1`] = `
<div>
  <div
    class="soui-slider soui-slider-wrapper"
  >
    <div
      class="soui-slider-track"
    >
      <div
        class="soui-slider-track-inner"
        dir="ltr"
        style="left: 0%; right: 50%;"
      >
        <div
          class="soui-slider-indicator soui-slider-indicator-end soui-slider-indicator-hover"
          dir="ltr"
        />
        <div
          class="soui-slider-end-value soui-slider-value soui-slider-value-hover"
          dir="ltr"
        >
          50
        </div>
      </div>
    </div>
    <div
      class="soui-slider-scale-wrapper"
    >
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          0
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          100
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-slider soui-slider-wrapper soui-slider-disabled"
  >
    <div
      class="soui-slider-track"
    >
      <div
        class="soui-slider-track-inner"
        dir="ltr"
        style="left: 0%; right: 50%;"
      >
        <div
          class="soui-slider-indicator soui-slider-indicator-end soui-slider-indicator-hover"
          dir="ltr"
        />
        <div
          class="soui-slider-end-value soui-slider-value soui-slider-value-hover"
          dir="ltr"
        >
          50
        </div>
      </div>
    </div>
    <div
      class="soui-slider-scale-wrapper"
    >
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          0
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          100
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider[Base] should render correctly about virtual 1`] = `
<div>
  <div
    class="soui-slider soui-slider-wrapper soui-slider-vertical"
    style="height: 200px;"
  >
    <div
      class="soui-slider-track"
    >
      <div
        class="soui-slider-track-inner"
        dir="ltr"
        style="bottom: 0%; top: 50%;"
      >
        <div
          class="soui-slider-indicator soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="soui-slider-end-value soui-slider-value"
          dir="ltr"
        >
          50
        </div>
      </div>
    </div>
    <div
      class="soui-slider-scale-wrapper"
    >
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          0
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          100
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-slider soui-slider-wrapper soui-slider-vertical"
    style="height: 200px;"
  >
    <div
      class="soui-slider-track"
    >
      <div
        class="soui-slider-track-inner"
        dir="ltr"
        style="bottom: 12%; top: 30.000000000000004%;"
      >
        <div
          class="soui-slider-indicator soui-slider-indicator-start"
          dir="ltr"
        />
        <div
          class="soui-slider-start-value soui-slider-value"
          dir="ltr"
        >
          12
        </div>
        <div
          class="soui-slider-indicator soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="soui-slider-end-value soui-slider-value"
          dir="ltr"
        >
          70
        </div>
      </div>
    </div>
    <div
      class="soui-slider-scale-wrapper"
    >
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          0
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          100
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-slider soui-slider-wrapper soui-slider-vertical"
    style="height: 200px;"
  >
    <div
      class="soui-slider-track"
    >
      <div
        class="soui-slider-track-inner"
        dir="ltr"
        style="bottom: 0%; top: 77.5%;"
      >
        <div
          class="soui-slider-indicator soui-slider-indicator-end"
          dir="ltr"
        />
      </div>
    </div>
    <div
      class="soui-slider-scale-wrapper"
    >
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          0℃
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          20℃
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          40℃
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          60℃
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          100℃
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-slider soui-slider-wrapper soui-slider-auto-hide soui-slider-vertical"
    style="height: 200px;"
  >
    <div
      class="soui-slider-track"
    >
      <div
        class="soui-slider-track-inner"
        dir="ltr"
        style="bottom: 12%; top: 30.000000000000004%;"
      >
        <div
          class="soui-slider-indicator soui-slider-indicator-start"
          dir="ltr"
        />
        <div
          class="soui-slider-start-value soui-slider-value"
          dir="ltr"
        >
          12
        </div>
        <div
          class="soui-slider-indicator soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="soui-slider-end-value soui-slider-value"
          dir="ltr"
        >
          70
        </div>
      </div>
    </div>
    <div
      class="soui-slider-scale-wrapper"
    >
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          0
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          100
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-slider soui-slider-wrapper soui-slider-disabled soui-slider-vertical"
    style="height: 200px;"
  >
    <div
      class="soui-slider-track"
    >
      <div
        class="soui-slider-track-inner"
        dir="ltr"
        style="bottom: 12%; top: 30.000000000000004%;"
      >
        <div
          class="soui-slider-indicator soui-slider-indicator-start"
          dir="ltr"
        />
        <div
          class="soui-slider-start-value soui-slider-value"
          dir="ltr"
        >
          12
        </div>
        <div
          class="soui-slider-indicator soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="soui-slider-end-value soui-slider-value"
          dir="ltr"
        >
          70
        </div>
      </div>
    </div>
    <div
      class="soui-slider-scale-wrapper"
    >
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          0
        </div>
      </div>
      <div
        class="soui-slider-scale"
      >
        <div
          class="soui-slider-label"
          dir="ltr"
        >
          100
        </div>
      </div>
    </div>
  </div>
</div>
`;
